{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 1041,
  "lineage": "cfb9f0c8-1d89-f4cf-917f-cce2ed48c331",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP_Frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bea5ad5a4be3c95c",
            "arn": "arn:aws:ec2:us-east-1:071039905757:elastic-ip/eipalloc-0bea5ad5a4be3c95c",
            "association_id": "eipassoc-0bc2a210cd1ec27cc",
            "domain": "vpc",
            "id": "eipalloc-0bea5ad5a4be3c95c",
            "instance": "i-03eea2ef08828d9e2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c8585fb70bd2d0b8",
            "private_dns": "ip-10-0-0-162.ec2.internal",
            "private_ip": "10.0.0.162",
            "public_dns": "ec2-35-174-96-15.compute-1.amazonaws.com",
            "public_ip": "35.174.96.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_Frontend_CarePlus"
            },
            "tags_all": {
              "Name": "EIP_Frontend_CarePlus"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.EIP_NAT",
            "aws_instance.EC2_Backend_CarePlus",
            "aws_instance.EC2_Frontend_CarePlus",
            "aws_instance.EC2_RabbitMQ_CarePlus",
            "aws_internet_gateway.IGW_CarePlus",
            "aws_nat_gateway.NAT_CarePlus",
            "aws_route_table.RT_Privada_CarePlus",
            "aws_route_table_association.Assoc_Privada",
            "aws_s3_bucket.Bucket_CarePlus_Deploy",
            "aws_s3_object.careplus_consolidated_sql",
            "aws_s3_object.careplus_jar",
            "aws_s3_object.frontend_files",
            "aws_s3_object.mensageria_jar",
            "aws_security_group.SG_Backend_CarePlus",
            "aws_security_group.SG_Frontend_CarePlus",
            "aws_security_group.SG_RabbitMQ_CarePlus",
            "aws_subnet.Subnet_Privada_CarePlus",
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_subnet.Subnet_Publica2_CarePlus",
            "aws_vpc.VPC_CarePlus",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bdcbe46a6b410675",
            "arn": "arn:aws:ec2:us-east-1:071039905757:elastic-ip/eipalloc-0bdcbe46a6b410675",
            "association_id": "eipassoc-03e56d9dadea068d8",
            "domain": "vpc",
            "id": "eipalloc-0bdcbe46a6b410675",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d53e5919f3dcd4a0",
            "private_dns": "ip-10-0-0-67.ec2.internal",
            "private_ip": "10.0.0.67",
            "public_dns": "ec2-34-234-38-97.compute-1.amazonaws.com",
            "public_ip": "34.234.38.97",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_NAT_CarePlus"
            },
            "tags_all": {
              "Name": "EIP_NAT_CarePlus"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP_RabbitMQ",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0051727cb11350220",
            "arn": "arn:aws:ec2:us-east-1:071039905757:elastic-ip/eipalloc-0051727cb11350220",
            "association_id": "eipassoc-0431529d4d8b1665b",
            "domain": "vpc",
            "id": "eipalloc-0051727cb11350220",
            "instance": "i-006c4bc84214d3177",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b3f13e483384e802",
            "private_dns": "ip-10-0-1-35.ec2.internal",
            "private_ip": "10.0.1.35",
            "public_dns": "ec2-184-72-133-95.compute-1.amazonaws.com",
            "public_ip": "184.72.133.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_RabbitMQ_CarePlus"
            },
            "tags_all": {
              "Name": "EIP_RabbitMQ_CarePlus"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.EC2_RabbitMQ_CarePlus",
            "aws_s3_bucket.Bucket_CarePlus_Deploy",
            "aws_s3_object.mensageria_jar",
            "aws_security_group.SG_RabbitMQ_CarePlus",
            "aws_subnet.Subnet_Publica2_CarePlus",
            "aws_vpc.VPC_CarePlus",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2_Backend_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:071039905757:instance/i-0b493c83cf28a6517",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cef945d76978d108",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0b493c83cf28a6517",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02637029f6927ca31",
            "private_dns": "ip-10-0-2-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cef945d76978d108",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075dade76c89908a9",
            "tags": {
              "Name": "EC2_Backend_CarePlus"
            },
            "tags_all": {
              "Name": "EC2_Backend_CarePlus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0024122f40660f0f9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.EIP_NAT",
            "aws_instance.EC2_RabbitMQ_CarePlus",
            "aws_internet_gateway.IGW_CarePlus",
            "aws_nat_gateway.NAT_CarePlus",
            "aws_route_table.RT_Privada_CarePlus",
            "aws_route_table_association.Assoc_Privada",
            "aws_s3_bucket.Bucket_CarePlus_Deploy",
            "aws_s3_object.careplus_consolidated_sql",
            "aws_s3_object.careplus_jar",
            "aws_s3_object.mensageria_jar",
            "aws_security_group.SG_Backend_CarePlus",
            "aws_security_group.SG_RabbitMQ_CarePlus",
            "aws_subnet.Subnet_Privada_CarePlus",
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_subnet.Subnet_Publica2_CarePlus",
            "aws_vpc.VPC_CarePlus",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2_Frontend_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:071039905757:instance/i-03eea2ef08828d9e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a8d73e5294940c9f",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-03eea2ef08828d9e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c8585fb70bd2d0b8",
            "private_dns": "ip-10-0-0-162.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.162",
            "public_dns": "ec2-44-211-135-229.compute-1.amazonaws.com",
            "public_ip": "44.211.135.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a8d73e5294940c9f",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068f2f8681d85d0a4",
            "tags": {
              "Name": "EC2_Frontend_CarePlus"
            },
            "tags_all": {
              "Name": "EC2_Frontend_CarePlus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050f246bf466fc988"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.EIP_NAT",
            "aws_instance.EC2_Backend_CarePlus",
            "aws_instance.EC2_RabbitMQ_CarePlus",
            "aws_internet_gateway.IGW_CarePlus",
            "aws_nat_gateway.NAT_CarePlus",
            "aws_route_table.RT_Privada_CarePlus",
            "aws_route_table_association.Assoc_Privada",
            "aws_s3_bucket.Bucket_CarePlus_Deploy",
            "aws_s3_object.careplus_consolidated_sql",
            "aws_s3_object.careplus_jar",
            "aws_s3_object.frontend_files",
            "aws_s3_object.mensageria_jar",
            "aws_security_group.SG_Backend_CarePlus",
            "aws_security_group.SG_Frontend_CarePlus",
            "aws_security_group.SG_RabbitMQ_CarePlus",
            "aws_subnet.Subnet_Privada_CarePlus",
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_subnet.Subnet_Publica2_CarePlus",
            "aws_vpc.VPC_CarePlus",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2_RabbitMQ_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:071039905757:instance/i-006c4bc84214d3177",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a6e09989948747db",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-006c4bc84214d3177",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b3f13e483384e802",
            "private_dns": "ip-10-0-1-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.35",
            "public_dns": "ec2-184-72-133-95.compute-1.amazonaws.com",
            "public_ip": "184.72.133.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a6e09989948747db",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d317f49de2deba2",
            "tags": {
              "Name": "EC2_RabbitMQ_CarePlus"
            },
            "tags_all": {
              "Name": "EC2_RabbitMQ_CarePlus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b4f07568b615b650"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_bucket.Bucket_CarePlus_Deploy",
            "aws_s3_object.mensageria_jar",
            "aws_security_group.SG_RabbitMQ_CarePlus",
            "aws_subnet.Subnet_Publica2_CarePlus",
            "aws_vpc.VPC_CarePlus",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:internet-gateway/igw-00a4f4ebd04d666aa",
            "id": "igw-00a4f4ebd04d666aa",
            "owner_id": "071039905757",
            "tags": {
              "Name": "IGW_CarePlus"
            },
            "tags_all": {
              "Name": "IGW_CarePlus"
            },
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "LB_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:071039905757:loadbalancer/app/lb-careplus/453fc4b4ae35c987",
            "arn_suffix": "app/lb-careplus/453fc4b4ae35c987",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-careplus-1908075109.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:071039905757:loadbalancer/app/lb-careplus/453fc4b4ae35c987",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-careplus",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0024122f40660f0f9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d317f49de2deba2"
              },
              {
                "subnet_id": "subnet-068f2f8681d85d0a4"
              }
            ],
            "subnets": [
              "subnet-03d317f49de2deba2",
              "subnet-068f2f8681d85d0a4"
            ],
            "tags": {
              "Name": "LB_CarePlus"
            },
            "tags_all": {
              "Name": "LB_CarePlus"
            },
            "vpc_id": "vpc-0430454483b2f476d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.SG_Backend_CarePlus",
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_subnet.Subnet_Publica2_CarePlus",
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LB_Listener_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:071039905757:listener/app/lb-careplus/453fc4b4ae35c987/c8bc9c3848d57ca5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:071039905757:targetgroup/tg-careplus-back/cd53661514423327",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:071039905757:listener/app/lb-careplus/453fc4b4ae35c987/c8bc9c3848d57ca5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:071039905757:loadbalancer/app/lb-careplus/453fc4b4ae35c987",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.LB_CarePlus",
            "aws_lb_target_group.TG_Backend_CarePlus",
            "aws_security_group.SG_Backend_CarePlus",
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_subnet.Subnet_Publica2_CarePlus",
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG_Backend_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:071039905757:targetgroup/tg-careplus-back/cd53661514423327",
            "arn_suffix": "targetgroup/tg-careplus-back/cd53661514423327",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/swagger-ui.html",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:071039905757:targetgroup/tg-careplus-back/cd53661514423327",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:071039905757:loadbalancer/app/lb-careplus/453fc4b4ae35c987"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-careplus-back",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TG_Backend_CarePlus"
            },
            "tags_all": {
              "Name": "TG_Backend_CarePlus"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG_Attach_Backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:071039905757:targetgroup/tg-careplus-back/cd53661514423327-20260524235252300300000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:071039905757:targetgroup/tg-careplus-back/cd53661514423327",
            "target_id": "i-0b493c83cf28a6517"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.EIP_NAT",
            "aws_instance.EC2_Backend_CarePlus",
            "aws_instance.EC2_RabbitMQ_CarePlus",
            "aws_internet_gateway.IGW_CarePlus",
            "aws_lb_target_group.TG_Backend_CarePlus",
            "aws_nat_gateway.NAT_CarePlus",
            "aws_route_table.RT_Privada_CarePlus",
            "aws_route_table_association.Assoc_Privada",
            "aws_s3_bucket.Bucket_CarePlus_Deploy",
            "aws_s3_object.careplus_consolidated_sql",
            "aws_s3_object.careplus_jar",
            "aws_s3_object.mensageria_jar",
            "aws_security_group.SG_Backend_CarePlus",
            "aws_security_group.SG_RabbitMQ_CarePlus",
            "aws_subnet.Subnet_Privada_CarePlus",
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_subnet.Subnet_Publica2_CarePlus",
            "aws_vpc.VPC_CarePlus",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bdcbe46a6b410675",
            "association_id": "eipassoc-03e56d9dadea068d8",
            "connectivity_type": "public",
            "id": "nat-02c12025a1e4df532",
            "network_interface_id": "eni-0d53e5919f3dcd4a0",
            "private_ip": "10.0.0.67",
            "public_ip": "34.234.38.97",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-068f2f8681d85d0a4",
            "tags": {
              "Name": "NAT_CarePlus"
            },
            "tags_all": {
              "Name": "NAT_CarePlus"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.EIP_NAT",
            "aws_internet_gateway.IGW_CarePlus",
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NACL_Privada_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:network-acl/acl-0e447fb59f2971f98",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e447fb59f2971f98",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/22",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "071039905757",
            "subnet_ids": [
              "subnet-075dade76c89908a9"
            ],
            "tags": {
              "Name": "NACL_Privada_CarePlus"
            },
            "tags_all": {
              "Name": "NACL_Privada_CarePlus"
            },
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.Subnet_Privada_CarePlus",
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NACL_Publica_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:network-acl/acl-08563e06a05e20517",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08563e06a05e20517",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "071039905757",
            "subnet_ids": [
              "subnet-03d317f49de2deba2",
              "subnet-068f2f8681d85d0a4"
            ],
            "tags": {
              "Name": "NACL_Publica_CarePlus"
            },
            "tags_all": {
              "Name": "NACL_Publica_CarePlus"
            },
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_subnet.Subnet_Publica2_CarePlus",
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_Privada_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:route-table/rtb-05bbec15384a3183e",
            "id": "rtb-05bbec15384a3183e",
            "owner_id": "071039905757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02c12025a1e4df532",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_Privada_CarePlus"
            },
            "tags_all": {
              "Name": "RT_Privada_CarePlus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.EIP_NAT",
            "aws_internet_gateway.IGW_CarePlus",
            "aws_nat_gateway.NAT_CarePlus",
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_Publica_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:route-table/rtb-0aab0c8404dc561ef",
            "id": "rtb-0aab0c8404dc561ef",
            "owner_id": "071039905757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a4f4ebd04d666aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_Publica_CarePlus"
            },
            "tags_all": {
              "Name": "RT_Publica_CarePlus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW_CarePlus",
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Assoc_Privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff64162113a24d7c",
            "route_table_id": "rtb-05bbec15384a3183e",
            "subnet_id": "subnet-075dade76c89908a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.EIP_NAT",
            "aws_internet_gateway.IGW_CarePlus",
            "aws_nat_gateway.NAT_CarePlus",
            "aws_route_table.RT_Privada_CarePlus",
            "aws_subnet.Subnet_Privada_CarePlus",
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Assoc_Publica1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a071d6b38b9a06bb",
            "route_table_id": "rtb-0aab0c8404dc561ef",
            "subnet_id": "subnet-068f2f8681d85d0a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW_CarePlus",
            "aws_route_table.RT_Publica_CarePlus",
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Assoc_Publica2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026fe2641d58febcc",
            "route_table_id": "rtb-0aab0c8404dc561ef",
            "subnet_id": "subnet-03d317f49de2deba2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW_CarePlus",
            "aws_route_table.RT_Publica_CarePlus",
            "aws_subnet.Subnet_Publica2_CarePlus",
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_Backend_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:security-group/sg-0024122f40660f0f9",
            "description": "Backend privado (Spring Boot) + MySQL - acesso somente via VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0024122f40660f0f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH (somente via jump host na subnet publica)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Spring Boot (ALB e frontend via VPC)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "SG_Backend_CarePlus",
            "name_prefix": "",
            "owner_id": "071039905757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_Backend_CarePlus"
            },
            "tags_all": {
              "Name": "SG_Backend_CarePlus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_Frontend_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:security-group/sg-050f246bf466fc988",
            "description": "Frontend (React/Vite)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050f246bf466fc988",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Generic 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Vite Dev Server",
                "from_port": 5173,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5173
              }
            ],
            "name": "SG_Frontend_CarePlus",
            "name_prefix": "",
            "owner_id": "071039905757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_Frontend_CarePlus"
            },
            "tags_all": {
              "Name": "SG_Frontend_CarePlus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_RabbitMQ_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:security-group/sg-0b4f07568b615b650",
            "description": "RabbitMQ broker + Mensageria + management UI",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4f07568b615b650",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "AMQP",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Mensageria Spring Boot",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RabbitMQ Management UI",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_RabbitMQ_CarePlus",
            "name_prefix": "",
            "owner_id": "071039905757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_RabbitMQ_CarePlus"
            },
            "tags_all": {
              "Name": "SG_RabbitMQ_CarePlus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_Privada_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:subnet/subnet-075dade76c89908a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075dade76c89908a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071039905757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_Privada_CarePlus"
            },
            "tags_all": {
              "Name": "Subnet_Privada_CarePlus"
            },
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_Publica1_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:subnet/subnet-068f2f8681d85d0a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068f2f8681d85d0a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "071039905757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_Publica1_CarePlus"
            },
            "tags_all": {
              "Name": "Subnet_Publica1_CarePlus"
            },
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_Publica2_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:subnet/subnet-03d317f49de2deba2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d317f49de2deba2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "071039905757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_Publica2_CarePlus"
            },
            "tags_all": {
              "Name": "Subnet_Publica2_CarePlus"
            },
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:vpc/vpc-0430454483b2f476d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-0cf9ad5f44ad66e84",
            "default_route_table_id": "rtb-04ff58d87c71b2678",
            "default_security_group_id": "sg-02d60228abd383f4e",
            "dhcp_options_id": "dopt-022485168d5831949",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0430454483b2f476d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ff58d87c71b2678",
            "owner_id": "071039905757",
            "tags": {
              "Name": "VPC_CarePlus"
            },
            "tags_all": {
              "Name": "VPC_CarePlus"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "S3_Endpoint_CarePlus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071039905757:vpc-endpoint/vpce-0c52fb287ddc2e81c",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c52fb287ddc2e81c",
            "ip_address_type": "ipv4",
            "owner_id": "071039905757",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-05bbec15384a3183e"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "S3_Endpoint_CarePlus"
            },
            "tags_all": {
              "Name": "S3_Endpoint_CarePlus"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0430454483b2f476d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.EIP_NAT",
            "aws_internet_gateway.IGW_CarePlus",
            "aws_nat_gateway.NAT_CarePlus",
            "aws_route_table.RT_Privada_CarePlus",
            "aws_subnet.Subnet_Publica1_CarePlus",
            "aws_vpc.VPC_CarePlus"
          ]
        }
      ]
    }
  ]
}